--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,21 +6,6 @@
     <link rel="stylesheet" href="/css/output.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul class="flex justify-between">
-          <li>
-            <a class="link" href="/index">Home</a>
-          </li>
-          <li>
-            <a class="link" href="/profile">Profile</a>
-          </li>
-          <li>
-            <a class="link" href="/logout">Logout</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
     <div class="container">
       <div class="card">
         <div class="headerBox">
@@ -33,6 +18,7 @@
         </div>
         <div th:if="${message}" class="success" th:text="${message}"></div>
         <form th:action="@{/login}" method="post">
+          <div class="labelInputBox">
             <label class="label" for="Username">Username:</label>
             <input
             class="input"
@@ -43,7 +29,8 @@
             placeholder="Username"
             required
             />
-
+          </div>
+          <div class="labelInputBox">
             <label class="label" for="password">Password:</label>
             <input
             class="input"
@@ -53,7 +40,7 @@
             placeholder="Password"
             required
             />
-
+          </div>
           <button class="button" type="submit">Login</button>
           <a class="link" href="/signup">Sign Up</a>
         </form>
