--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navbar">
         <ul class="flex justify-between">
           <li>
             <a class="link" href="/index">Home</a>
