--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,139 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" href="/css/output.css" />
+    <script src="/js/profileUpdates.js" defer></script>
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navBar flex flex-row p-3 justify-start items-center w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto">
         <ul class="flex justify-between">
           <li>
-            <a class="link" href="/index">Home</a>
-          </li>
-          <li>
-            <a class="link" href="/profile">Profile</a>
-          </li>
-          <li>
-            <a class="link" href="/logout">Logout</a>
+            <a class="link" href="/index">Back</a>
           </li>
         </ul>
       </nav>
-    </header>
-    <div class="container">
-      <div class="card">
-      <div class="headerBox">
-        <h1 class="formHeader">User Profile</h1>
-        <div class="cardProfile">
-          <div th:if="${message}" th:text="${message}" style="color: green;"></div>
-          <div th:if="${error}" th:text="${error}" style="color: red;"></div>
+      <div class="profileContainer">
+        <div class="flex flex-col justify-center items-center p-2">
+          <!-- profile image -->
+          <img
+          class="p-1 headerImage"
+          th:src="${user.profilePictureUrl}"
+          alt="profile"
+          />
+          <!-- profile username -->
+          <span class="text-md" th:text="${user.username}"></span>
+          <!-- update button -->
+          <a
+          href="#"
+          class=" bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
+          >Edit Profile</a
+          >
+        </div>
+        <div class="flex flex-col justify-start items-start p-2 w-full">
+          <div class="flex flex-col justify-start items-start p-2">
+            <h2 class="text-sm font-bold" th:text="${user?.username ?: 'Default Username'}"></h2>
+            <h2 class="text-sm font-thin" th:text="${user?.company ?: 'Default Company'}"></h2>
+            <p class="text-sm" th:text="${user?.biography ?: 'Default biography text goes here.'}"></p>
+            <p class="text-sm font-semibold" th:text="${user?.website ?: 'defaultwebsite.com'}"></p>
+          </div>
         </div>
       </div>
+    </header>
 
-        <!-- USER DETAILS -->
-          <img class="headerImage" th:src="${user.profilePictureUrl}" alt="Profile Picture" />
-          <a class="link">Update Profile Picture</a>
-          <a class="link">Back</a>
-
-          <div>
-            <form th:action="@{/update_profile_picture}" method="post" enctype="multipart/form-data">
-              <div class="flex flex-col items-center justify-center">
-                <div class="flex justify-center ">
-                  <input class="file-input" type="file" id="profilePicture" name="profilePicture" required>
-                </div>
-              </div>
-              <button class="button" type="submit">Update</button>  
-            </form>
-          </div>
-
-          <!-- Update Username -->
-          <label>Username: </label>
-          <span class="font-semibold" th:text="${user.username}"></span>
-          <a class="link" >Update Username</a>
-          <a class="link">Back</a>
-
-          <div >
-            <form th:action="@{/update_username}" method="post">
-               <input type="text" id="username" name="username" placeholder="New Username" required>
-               <button class="button" type="submit">Update</button>  
-           </form>
-         </div>
-
-          <!-- Update Email -->
-          <label>Email: </label>
-          <span class="font-semibold" th:text="${user.email}"></span>
-          <a class="link" >Update Email</a>
-          <a class="link">Back</a>
-
-          <div>
-            <form th:action="@{/update_email}" method="post">
-                <input type="email" id="newEmail" name="newEmail" placeholder="New Email" required>
-                <input type="email" id="confirmNewEmail" name="confirmNewEmail" placeholder="Confirm New Email" required>
-                <button class="button" type="submit">Update</button>  
-            </form>
-          </div>
-
-          <!-- Update Password -->
-          <label>Password: </label>
-          <a class="link" >Update Password</a>
-          <a class="link">Back</a>
-          <div>
-            <form th:action="@{/update_password}" method="post">
-               <input type="password" id="currentPassword" name="currentPassword" placeholder="Current Password" required>
-               <input type="password" id="newPassword" name="newPassword" placeholder="New Password" required>
-               <input type="password" id="confirmNewPassword" name="confirmNewPassword" placeholder="Confirm New Password" required>
-               <button class="button" type="submit">Update</button>  
-           </form>
-         </div>
-
-          <!-- Update Name -->
-          <label>Name: </label>
-          <div>
-            <span class="font-semibold" th:text="${user.firstName}"></span> <span class="font-semibold" th:text="${user.lastName}"></span>
-          </div>
-          <a class="link" >Update Name</a>
-          <a class="link">Back</a>
-
-          <div>
-            <form th:action="@{/update_name}" method="post">
-                <input type="text" id="firstName" name="firstName" placeholder="First Name" required th:value="${user.firstName}">
-                <input type="text" id="lastName" name="lastName" placeholder="Last Name" required th:value="${user.lastName}">
-                <button class="button" type="submit">Update</button>  
-            </form>
-            </div>
-
-          <!-- Update Biography -->
-          <label>Biography: </label>
-          <span class="font-semibold" th:text="${user.biography}"></span>
-          <a class="link" >Update Biography</a>
-          <a class="link">Back</a>
-
-          <div>
-            <form th:action="@{/update_biography}" method="post">
-                <label for="biography">Biography:</label>
-                <textarea id="biography" name="biography" placeholder="User Biography" required th:text="${user.biography}"></textarea>
-                <button class="button" type="submit">Update</button>  
-            </form>
-          </div>
-
-
-          <!-- Delete User -->
-          <label>Delete User:</label>
-          <a class="link" >Delete User</a>
-          <a class="link">Back</a>
-
-          <div>
-            <form th:action="@{/delete_user}" method="post">
-              <input type="hidden" name="username" th:value="${user.username}" />
-              <button class="button bg-red-600" type="submit">Permanently Delete</button>
-            </form>
-          </div>
-
-
-        </div>
+      <div>
+        <!-- User Collections -->
       </div>
     </div>
   </body>
-  <body>
 </html>
