--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -14,7 +14,6 @@
   form {
     @apply flex flex-col w-full items-center justify-center p-4;
   }
-
 }
 
 @layer components {
@@ -27,9 +26,12 @@
   }
 
   .navbar {
-    @apply flex flex-row p-3 justify-center items-center w-full bg-blue-500 text-white ;
+    @apply flex flex-row p-3 justify-between items-center w-full bg-blue-500 text-white shadow-sm;
   }
 
+  .profileNavbar {
+    @apply flex flex-row p-3 justify-between items-center w-full bg-slate-100 text-white;
+  }
 
   .label {
     @apply w-full text-sm text-left text-black;
@@ -79,21 +81,20 @@
   }
 
   .card {
-    @apply 
-    m-10
+    @apply m-10
     p-4
     flex 
     flex-col 
     items-center  
-    bg-gray-100 border 
-    border-gray-300 
+    bg-slate-200 
+    border 
+    border-slate-300 
     rounded-lg 
     shadow-sm
     w-[300px]
     overflow-y-auto 
     overflow-x-hidden;
   }
-
 
   .labelInputBox {
     @apply flex flex-col items-center justify-center;
