--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,15 +19,13 @@
   <body>
     <header>
       <nav class="navbar">
-        <ul class="flex justify-between">
+        <ul class="flex justify-between items-center w-full">
           <li>
-            <a class="link" href="/index">Home</a>
+            <img class="h-5 " href="/index" src="/images/Shelved_Logo_White.png" alt="Shelved Logo" />
           </li>
           <li>
-            <a class="link" href="/profile">Profile</a>
-          </li>
-          <li>
-            <a class="link" href="/logout">Logout</a>
+            <a  href="/profile" >
+              <img class="h-6 rounded-xl" th:src="${user != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}" alt="Profile Picture" /></a>
           </li>
         </ul>
       </nav>
