--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="/css/output.css" />
   </head>
   <body>
+    <header>
+      <nav class="navbar">
+        <ul class="flex justify-center items-center w-full">
+          <li>
+            <img class="h-5 " href="/index" src="/images/Shelved_Logo_White.png" alt="Shelved Logo" />
+          </li>
+        </ul>
+      </nav>
+    </header> 
     <div class="container">
       <div class="card">
         <div class="headerBox">
