delete account styling, form, and error handling

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
           </li>
           <li>
             <a  href="/profile" >
-              <img class="h-6 rounded-xl" th:src="${user != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}" alt="Profile Picture" /></a>
+              <img class="h-7 w-7 rounded-full" th:src="${user != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}" alt="Profile Picture" /></a>
           </li>
         </ul>
       </nav>
