--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -26,7 +26,7 @@
   }
 
   .navbar {
-    @apply flex flex-row p-3 justify-between items-center w-full bg-blue-500 text-white shadow-sm;
+    @apply flex flex-row p-3 justify-between items-center w-full bg-blue-500 text-white shadow-md;
   }
 
   .profileNavbar {
@@ -50,11 +50,11 @@
   }
 
   .cancelButton {
-    @apply font-bold text-white bg-slate-600 rounded-md hover:bg-slate-800 drop-shadow-sm m-1 px-6 py-1;
+    @apply text-xs font-bold text-white bg-slate-600 rounded-md hover:bg-slate-800 drop-shadow-sm m-1 px-6 py-1;
   }
 
   .deleteButton {
-    @apply font-bold text-white bg-red-500 rounded-md hover:bg-red-700 drop-shadow-sm m-1 px-6 py-1;
+    @apply text-xs font-bold text-white bg-red-500 rounded-md hover:bg-red-700 drop-shadow-sm m-1 px-6 py-1;
   }
 
   .smallUpdateButton {
