--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -40,9 +40,9 @@
           </a>
 
           <div class="h-4 w-full flex flex-col justify-center items-center">
-            // SUCCESS MESSAGE
+            <!-- SUCCESS MESSAGE -->
             <div id="successMessageDiv" th:if="${message}" th:text="${message}" style="color: green;"></div>
-            // ERROR MESSAGE
+            <!-- ERROR MESSAGE -->
             <div id="errorMessageDiv" th:if="${error}" th:text="${error}" style="color: red;"></div>
           </div>
 
