--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
           <h1 class="formHeader">Login</h1>
         </div>
 
-        <div class="h-4 w-full flex flex-col justify-center items-center">
+        <div class="errorBox"> 
           <!-- SUCCESS MESSAGE -->
           <div id="successMessageDiv" th:if="${param.logout}" class="success" >
             You have been logged out</div>
