--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -23,7 +23,7 @@
           <h1 class="formHeader">Sign Up</h1>
         </div>
 
-        <div class="h-4 w-full flex flex-col justify-center items-center">
+        <div class="errorBox">
           <!-- SUCCESS MESSAGE -->
           <div id="successMessageDiv" th:if="${message}" th:text="${message}" style="color: green;"></div>
           <!-- ERROR MESSAGE -->
