--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -39,7 +39,7 @@
             <span class="text-sm font-semibold text-blue-500">Update Profile Picture</span>
           </a>
 
-          <div class="h-4 w-full flex flex-col justify-center items-center">
+          <div class="errorBox">  
             <!-- SUCCESS MESSAGE -->
             <div id="successMessageDiv" th:if="${message}" th:text="${message}" style="color: green;"></div>
             <!-- ERROR MESSAGE -->
