--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -12,7 +12,7 @@
   }
 
   form {
-    @apply flex flex-col w-full items-center justify-center p-4;
+    @apply flex flex-col w-full items-center justify-center px-4 mt-1;
   }
 }
 
